--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.microsoft.azure</groupId>
   <artifactId>cosmosdb-java-create-documentdb-and-configure-for-high-availability</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>ManageHADocumentDB.java</name>
+  <name>ManageHACosmosDB.java</name>
   <description></description>
   <url>https://github.com/Azure/cosmosdb-java-create-documentdb-and-configure-for-high-availability</url>
   <build>
@@ -15,7 +15,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.4.0</version>
         <configuration>
-          <mainClass>com.microsoft.azure.management.documentdb.samples.ManageHADocumentDB</mainClass>
+          <mainClass>com.microsoft.azure.management.cosmosdb.samples.ManageHACosmosDB</mainClass>
         </configuration>
       </plugin>
       <plugin>
@@ -40,7 +40,7 @@
               </descriptorRefs>
               <archive>
                 <manifest>
-                  <mainClass>com.microsoft.azure.management.documentdb.samples.ManageHADocumentDB.java</mainClass>
+                  <mainClass>com.microsoft.azure.management.cosmosdb.samples.ManageHACosmosDB.java</mainClass>
                 </manifest>
               </archive>
             </configuration>
@@ -53,17 +53,17 @@
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>azure</artifactId>
-      <version>1.1.0</version>
+      <version>1.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.cverges.expect4j</groupId>
+      <artifactId>expect4j</artifactId>
+      <version>1.6</version>
     </dependency>
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>azure-documentdb</artifactId>
       <version>1.9.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-net</groupId>
-      <artifactId>commons-net</artifactId>
-      <version>3.3</version>
     </dependency>
   </dependencies>
 </project>
